versions/1.2.3/source/index.rst
Kids Web Services Children's Android SDK
========================================

The Kids Web Services platform provides a set of compliance-as-a-service tools to create a kid-safe, COPPA-compliant framework for kids sites and apps.
Focus on delivering awesome content, whilst KWS manages the legal complexity of data-collection for you.
With simplicity built into its core, you will be able to effortlessly integrate Kids Web Services within your current technology.

=========== ========
Info        Contents
=========== ========
Version     <sdk_version> (`Changelog <https://github.com/SuperAwesomeLTD/sa-kws-android-sdk/blob/master/CHANGELOG.md>`_)
Support 		<sdk_min>
GitHub      <sdk_source>
Contact     `<sdk_devsuspport> <mailto:<sdk_devsuspport>>`_
License     `GNU General Public License Version 3 <https://github.com/SuperAwesomeLTD/sa-kws-android-sdk/blob/master/LICENSE>`_
=========== ========

Table of Contents:

.. toctree::
   :maxdepth: 2

   Integrate the SDK <01integrate>
   Overview <02overview>
   Setup the SDK <03setup>
   Process <04process>
   Errors <05errors>
   Success <06success>
   Example <07example>
